--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-quiz",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://iamsubroto.github.io/react_quiz",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
